Fix corner size being too small on big screens

--- a/assets/css/tailwind.prod.css
+++ b/assets/css/tailwind.prod.css
@@ -615,6 +615,8 @@ body::before { content: '-'; padding: 0.5rem; color: #fff; font-size: 0.75rem; l
 .inset-0 { top: 0px; right: 0px; bottom: 0px; left: 0px; }
 .-inset-y-8 { top: -2rem; bottom: -2rem; }
 .inset-x-0 { left: 0px; right: 0px; }
+.-inset-y-12 { top: -3rem; bottom: -3rem; }
+.-inset-y-16 { top: -4rem; bottom: -4rem; }
 .right-0 { right: 0px; }
 .top-0 { top: 0px; }
 .top-\[-48px\] { top: -48px; }
@@ -651,6 +653,8 @@ body::before { content: '-'; padding: 0.5rem; color: #fff; font-size: 0.75rem; l
 .my-4 { margin-top: 1rem; margin-bottom: 1rem; }
 .my-8 { margin-top: 2rem; margin-bottom: 2rem; }
 .my-auto { margin-top: auto; margin-bottom: auto; }
+.my-12 { margin-top: 3rem; margin-bottom: 3rem; }
+.my-16 { margin-top: 4rem; margin-bottom: 4rem; }
 .-mb-4 { margin-bottom: -1rem; }
 .-mb-5 { margin-bottom: -1.25rem; }
 .-mb-8 { margin-bottom: -2rem; }
@@ -961,6 +965,7 @@ body::before { content: '-'; padding: 0.5rem; color: #fff; font-size: 0.75rem; l
  .lg\:-mb-12 { margin-bottom: -3rem; }
  .lg\:-mt-24 { margin-top: -6rem; }
  .lg\:mt-12 { margin-top: 3rem; }
+ .lg\:mb-4 { margin-bottom: 1rem; }
  .lg\:\!block { display: block !important; }
  .lg\:block { display: block; }
  .lg\:flex { display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; }
@@ -992,6 +997,7 @@ body::before { content: '-'; padding: 0.5rem; color: #fff; font-size: 0.75rem; l
  .lg\:gap-24 { gap: 6rem; }
  .lg\:gap-4 { gap: 1rem; }
  .lg\:rounded-br-\[16rem\] { -webkit-border-bottom-right-radius: 16rem; -moz-border-radius-bottomright: 16rem; border-bottom-right-radius: 16rem; }
+ .lg\:rounded-tl-\[16rem\] { -webkit-border-top-left-radius: 16rem; -moz-border-radius-topleft: 16rem; border-top-left-radius: 16rem; }
  .lg\:border-b-0 { border-bottom-width: 0px; }
  .lg\:border-l { border-left-width: 1px; }
  .lg\:border-none { border-style: none; }
